--- a/sass/main.scss
+++ b/sass/main.scss
@@ -154,12 +154,20 @@ body{
     top: -25px;
 }
 .effet-5{
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
+    right: 10%;
+    top: 30%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 50%;
+    overflow: hidden;
+    animation: tourner 10s linear infinite;
 }
 .effet-5 div{
-    width: 4px;
+    width: 1px;
     background-color: #4dd0e1;
+    height: 100%;
 }
 @keyframes tourner {
     0%{
@@ -346,7 +354,7 @@ body{
 .section__accueil .image__accueil{
     flex: 0 0 50%;
     max-width: 50%;
-    padding: 0 15px;
+    padding:0 15px;
 }  
 .section__accueil .texte__accueil p{
     color: $textNoir-600;
@@ -371,16 +379,17 @@ body{
     margin-top: 30px;
 }
 .section__accueil .image__accueil .boite__image{
-    max-width:450px;
+    max-width:550px;
     display: block;
     margin: auto;
     border-radius: 50%;
-    padding: 15px;
+    padding: 30px;
 }
 .section__accueil .image__accueil .boite__image img{
     width: 100%;
     border-radius: 50%;
-    border: 10px solid transparent;
+    //border: 10px solid transparent;
+    margin: auto;
 }
 @media(max-width:767px){
     .section__infos .capacite .element--capacite,
@@ -442,14 +451,15 @@ body{
     max-width: 40%;
     padding: 0 15px;
 }
+
 .section__infos .img--profile .boite__image{
-    padding: 15px;
+    padding: 30px;
     border-radius: 5px;
 
 }
 .section__infos .img--profile .boite__image img{
     width: 100%;
-    border: 10px solid transparent;
+    border: 10px solid transparent; 
     border-radius: 5px;
 }
 .section__infos .img--profile .lien--reseau{
