--- a/styles/main.css
+++ b/styles/main.css
@@ -467,15 +467,14 @@ body {
     padding-left: 15px;
   }
 }
-@media (max-width: 574px) {
-  .section__accueil .image__accueil .boite__image {
-    max-width: 260px;
-  }
-
-  .section__accueil .texte__accueil h2 {
-    font-size: 40px;
-  }
-}
+/* @media(max-width:574px){
+    .section__accueil .image__accueil .boite__image{
+        max-width: 260px;
+    }
+    .section__accueil .texte__accueil h2{
+        font-size: 40px;
+    }
+} */
 /*---------------INFOS-------------*/
 .section__infos {
   padding: 80px 0 0;
