--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,7 +54,7 @@ body{
 .conteneur{
     max-width: 70%;
     margin: auto;
-    background-color:lightgrey;
+    /* background-color:lightgrey; */
 }
 .conteneur--alignement{
     display: flex;
@@ -516,7 +516,7 @@ body{
     display: inline-block;
     height: 40px;
     width: 40px;
-    font-size: 16px;
+    font-size: 25px;
     text-align: center;
     color: $textNoir-600;
     margin: 0 15px;
@@ -558,6 +558,8 @@ body{
     position: relative;
     left: 40%;
     transform: translate(-60%);
+    width: 23%;
+    text-align: center;
 }
 .section__infos .tab--competence{
     padding: 60px 15px 50px;
@@ -576,12 +578,12 @@ body{
     color: $textNoir-600;
     font-weight: 500;
     text-transform: capitalize;
+    width: 10%;
+    text-align: center;
 }
 .section__infos .tab--competence .tab--element:hover{
     color: $couleur1;
 }
-
-
 .section__infos .tab--contenu{
     flex: 0 0 100%;
     max-width: 100%;
@@ -593,6 +595,8 @@ body{
 }
 .section__infos .capacite{
     padding: 0 0 40px;
+    position: relative;
+    left: 4%;
 }
 .section__infos .capacite .element--capacite p{
     font-size: 16px;
@@ -613,10 +617,11 @@ body{
 .section__infos .capacite .element--capacite .barre--progression{
     animation: chargement 3s normal forwards;
     border-radius: 100px;
-    background: $textNoir-600;
-    height: 6px;
+    background: $textNoir-300;
+    height: 8px;
     width: 0;
-
+    position: relative;
+    top:10%;
 }
 .section__infos .capacite .element--capacite .barre--progression span{
     position: absolute;
@@ -627,9 +632,6 @@ body{
     color: $textNoir-600;
     margin-top: -30px;
 }
-
-
-
 
 .section__infos .experience{
     padding-bottom:80px;
@@ -668,8 +670,8 @@ body{
 .section__infos .separateur .separateur--element--interieur .icon{
     height: 40px;
     width: 40px;
-    background-color: $fondNoir-50;
-    border: 1px solid $fondNoir-100;
+    background-color: #040407;
+    border: 1px solid #040407;
     text-align: center;
     border-radius: 50%;
     color: $couleur1;
@@ -686,7 +688,7 @@ body{
 }
 .section__infos .separateur .separateur--element--interieur h3{
     font-size: 20px;
-    color: $textNoir-700;
+    color: $textNoir-300;
     font-weight: 600;
     margin: 0 0 5px;
     text-transform: capitalize;
@@ -699,7 +701,7 @@ body{
 }
 .section__infos .separateur .separateur--element--interieur p{
     font-size: 16px;
-    color: $textNoir-600;
+    color: $textNoir-700;
     line-height: 26px;
     margin: 15px 0 0;
 }
@@ -848,4 +850,56 @@ body{
     max-width: 100%;
     text-align: right;
     padding: 0 15px;
+}
+
+/*---------------PROJETS-------------*/
+.section--projet {
+	padding: 80px 0 80px;
+	min-height: 100vh;
+}
+.section--projet .element--projet {
+	flex: 0 0 33.33%;
+	max-width: 33.33%;
+	padding: 15px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.section--projet .element--projet__interieur {
+	padding: 15px;
+	border-radius: 5px;
+	cursor: pointer;
+	width: 100%;
+}
+.section--projet .element--projet__img img {
+	border-radius: 5px;
+	width: 100%;
+	transition: all 0.3s ease;
+}
+.section--projet .element--projet__interieur:hover .element--projet__img img {
+	transform: translateY(-25px);
+}
+.section--projet .element--projet__img {
+	position: relative;
+}
+.section--projet .element--projet__img .voir--projet {
+	text-transform: capitalize;
+	font-size: 16px;
+	font-weight: 500;
+	color: $couleur1;
+	transition: all 0.3s ease;
+	position: absolute;
+	left: 0;
+	bottom: -4px;
+	transform: translateY(-5px);
+	opacity: 0;
+}
+.section--projet .element--projet__interieur:hover .voir--projet {
+	transform: translateY(0px);
+	opacity: 1;
+}
+.section--projet .element--projet__interieur p {
+	font-size: 16px;
+	margin: 10px 0 0;
+	color: $textNoir-600;
+	text-transform: capitalize;
 }
