--- a/sass/main.scss
+++ b/sass/main.scss
@@ -754,6 +754,7 @@ body{
     transition: all .3s ease;
     display: block;
     margin: 0 auto 30px;
+    color: $textNoir-300;
 }
 .section--service .element--service__interieur .icon i{
     font-size: 25px;
@@ -765,7 +766,7 @@ body{
 .section--service .element--service__interieur h3{
     font-size: 20px;
     font-weight: 600;
-    color: $textNoir-700;
+    color: $textNoir-300;
     margin: 0 0 10px;
     text-transform: capitalize;
 }
@@ -775,6 +776,65 @@ body{
     margin: 0;
     line-height: 26px;
 }
+
+
+/*---------------PROJETS-------------*/
+.section--projet {
+	padding: 80px 0 80px;
+	min-height: 100vh;
+}
+.section--projet .element--projet {
+	flex: 0 0 33.33%;
+	max-width: 33.33%;
+	padding: 15px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.section--projet .element--projet__interieur {
+	padding: 15px;
+	border-radius: 5px;
+	cursor: pointer;
+	width: 100%;
+}
+.section--projet .elements--projet .element--projet__titre{
+    color: $textNoir-300;
+}
+.section--projet .element--projet__img img {
+	border-radius: 5px;
+	width: 100%;
+	transition: all 0.3s ease;
+}
+.section--projet .element--projet__interieur:hover .element--projet__img img {
+	transform: translateY(-25px);
+}
+.section--projet .element--projet__img {
+	position: relative;
+    padding-top: 15px;
+}
+.section--projet .element--projet__img .voir--projet {
+	text-transform: capitalize;
+	font-size: 16px;
+	font-weight: 500;
+	color: $couleur1;
+	transition: all 0.3s ease;
+	position: absolute;
+	left: 0;
+	bottom: -4px;
+	transform: translateY(-5px);
+	opacity: 0;
+}
+.section--projet .element--projet__interieur:hover .voir--projet {
+	transform: translateY(0px);
+	opacity: 1;
+}
+.section--projet .element--projet__interieur p {
+	font-size: 16px;
+	margin: 10px 0 0;
+	color: $textNoir-600;
+	text-transform: capitalize;
+}
+
+/*---------------CONTACTS-------------*/
 
 .section--contact{
     padding: 80px 0 80px;
@@ -852,54 +912,3 @@ body{
     padding: 0 15px;
 }
 
-/*---------------PROJETS-------------*/
-.section--projet {
-	padding: 80px 0 80px;
-	min-height: 100vh;
-}
-.section--projet .element--projet {
-	flex: 0 0 33.33%;
-	max-width: 33.33%;
-	padding: 15px;
-	display: flex;
-	flex-wrap: wrap;
-}
-.section--projet .element--projet__interieur {
-	padding: 15px;
-	border-radius: 5px;
-	cursor: pointer;
-	width: 100%;
-}
-.section--projet .element--projet__img img {
-	border-radius: 5px;
-	width: 100%;
-	transition: all 0.3s ease;
-}
-.section--projet .element--projet__interieur:hover .element--projet__img img {
-	transform: translateY(-25px);
-}
-.section--projet .element--projet__img {
-	position: relative;
-}
-.section--projet .element--projet__img .voir--projet {
-	text-transform: capitalize;
-	font-size: 16px;
-	font-weight: 500;
-	color: $couleur1;
-	transition: all 0.3s ease;
-	position: absolute;
-	left: 0;
-	bottom: -4px;
-	transform: translateY(-5px);
-	opacity: 0;
-}
-.section--projet .element--projet__interieur:hover .voir--projet {
-	transform: translateY(0px);
-	opacity: 1;
-}
-.section--projet .element--projet__interieur p {
-	font-size: 16px;
-	margin: 10px 0 0;
-	color: $textNoir-600;
-	text-transform: capitalize;
-}
