--- a/styles/main.css
+++ b/styles/main.css
@@ -674,7 +674,8 @@ body {
   border-radius: 50%;
   transition: all .3s ease;
   display: block;
-  margin: 0 auto 30px; }
+  margin: 0 auto 30px;
+  color: #bbbbbb; }
 
 .section--service .element--service__interieur .icon i {
   font-size: 25px;
@@ -686,7 +687,7 @@ body {
 .section--service .element--service__interieur h3 {
   font-size: 20px;
   font-weight: 600;
-  color: #555555;
+  color: #bbbbbb;
   margin: 0 0 10px;
   text-transform: capitalize; }
 
@@ -696,6 +697,62 @@ body {
   margin: 0;
   line-height: 26px; }
 
+/*---------------PROJETS-------------*/
+.section--projet {
+  padding: 80px 0 80px;
+  min-height: 100vh; }
+
+.section--projet .element--projet {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap; }
+
+.section--projet .element--projet__interieur {
+  padding: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%; }
+
+.section--projet .elements--projet .element--projet__titre {
+  color: #bbbbbb; }
+
+.section--projet .element--projet__img img {
+  border-radius: 5px;
+  width: 100%;
+  transition: all 0.3s ease; }
+
+.section--projet .element--projet__interieur:hover .element--projet__img img {
+  transform: translateY(-25px); }
+
+.section--projet .element--projet__img {
+  position: relative;
+  padding-top: 15px; }
+
+.section--projet .element--projet__img .voir--projet {
+  text-transform: capitalize;
+  font-size: 16px;
+  font-weight: 500;
+  color: #fb839e;
+  transition: all 0.3s ease;
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  transform: translateY(-5px);
+  opacity: 0; }
+
+.section--projet .element--projet__interieur:hover .voir--projet {
+  transform: translateY(0px);
+  opacity: 1; }
+
+.section--projet .element--projet__interieur p {
+  font-size: 16px;
+  margin: 10px 0 0;
+  color: #666666;
+  text-transform: capitalize; }
+
+/*---------------CONTACTS-------------*/
 .section--contact {
   padding: 80px 0 80px;
   min-width: 100vh; }
@@ -770,56 +827,5 @@ body {
   max-width: 100%;
   text-align: right;
   padding: 0 15px; }
-
-/*---------------PROJETS-------------*/
-.section--projet {
-  padding: 80px 0 80px;
-  min-height: 100vh; }
-
-.section--projet .element--projet {
-  flex: 0 0 33.33%;
-  max-width: 33.33%;
-  padding: 15px;
-  display: flex;
-  flex-wrap: wrap; }
-
-.section--projet .element--projet__interieur {
-  padding: 15px;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 100%; }
-
-.section--projet .element--projet__img img {
-  border-radius: 5px;
-  width: 100%;
-  transition: all 0.3s ease; }
-
-.section--projet .element--projet__interieur:hover .element--projet__img img {
-  transform: translateY(-25px); }
-
-.section--projet .element--projet__img {
-  position: relative; }
-
-.section--projet .element--projet__img .voir--projet {
-  text-transform: capitalize;
-  font-size: 16px;
-  font-weight: 500;
-  color: #fb839e;
-  transition: all 0.3s ease;
-  position: absolute;
-  left: 0;
-  bottom: -4px;
-  transform: translateY(-5px);
-  opacity: 0; }
-
-.section--projet .element--projet__interieur:hover .voir--projet {
-  transform: translateY(0px);
-  opacity: 1; }
-
-.section--projet .element--projet__interieur p {
-  font-size: 16px;
-  margin: 10px 0 0;
-  color: #666666;
-  text-transform: capitalize; }
 
 /*# sourceMappingURL=main.css.map */
