--- a/styles/main.css
+++ b/styles/main.css
@@ -777,13 +777,13 @@ body {
   display: block;
   font-size: 16px;
   font-weight: 600;
-  color: #555555;
+  color: #666666;
   margin: 15px 0 10px;
   text-transform: capitalize; }
 
 .section--contact .element--contact__interieur p {
   font-size: 16px;
-  color: #666666;
+  color: #bbbbbb;
   line-height: 26px;
   margin: 0;
   word-break: break-word; }
