--- a/styles/main.css
+++ b/styles/main.css
@@ -392,29 +392,7 @@ body {
     left: 15%; }
 
   .effet-5 {
-    right: 4%; }
-
-  /*  .section__infos .img--profile{
-       padding-bottom: 30px;
-   }
-   .section__infos .separateur .separateur--element:nth-child(2n+1){
-       padding-right: 15px;
-       text-align: left;
-       padding-left: 75px;
-   }
-   .section__infos .separateur .separateur--element:nth-child(2n){
-       padding-left: 75px;
-   }
-   .section__infos .separateur::before{
-   content: '';
-   left: 35px;
-   }
-   .section__infos .separateur .separateur--element{
-       margin-bottom: 40px;
-   }
-   .section__infos .separateur .separateur--element:last-child{
-       margin-bottom: 0;
-   } */ }
+    right: 4%; } }
 @media (max-width: 574px) {
   .section__accueil .image__accueil .boite__image {
     max-width: 260px; } }
@@ -647,8 +625,13 @@ body {
     max-width: 90%;
     padding: 0 25px; }
 
-  section__infos .infos--apropos .bouton {
-    margin: 30px 20px 0 0; } }
+  .section__infos .infos--apropos .bouton {
+    margin: 30px 20px 0 0;
+    position: relative;
+    left: 40%;
+    transform: translate(-60%);
+    width: 28%;
+    text-align: center; } }
 /*---------------SERVICES-------------*/
 .section--service {
   padding: 80px 0 80px;
